removing uneeded file in ingest node

--- a/openshift_solution/docling_elyra_summit.yaml
+++ b/openshift_solution/docling_elyra_summit.yaml
@@ -34,10 +34,11 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''copy_files-e4165c2f-c2b3-4415-92b8-a0d36b4b4e69.tar.gz'' --file ''elyra_docling_rh_summit/openshift_solution/copy_files.py''
-          --outputs ''sourcedocs/2304.14953v2-part1.pdf;sourcedocs/2304.14953v2-part2.docx''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''copy_files-e4165c2f-c2b3-4415-92b8-a0d36b4b4e69.tar.gz''
+          --file ''elyra_docling_rh_summit/openshift_solution/copy_files.py'' --outputs
+          ''sourcedocs/2304.14953v2-part1.pdf;sourcedocs/2304.14953v2-part2.docx''
           "
 
           '
@@ -73,10 +74,10 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''ingest-summit-9da8883d-0641-40ae-8fa3-ac56dcc1fb5b.tar.gz'' --file ''instruct-generate/ingest-summit.ipynb''
-          --inputs ''resultdocs/note.txt;sourcedocs/2304.14953v2-part1.pdf;sourcedocs/2304.14953v2-part2.docx''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''ingest-summit-9da8883d-0641-40ae-8fa3-ac56dcc1fb5b.tar.gz''
+          --file ''instruct-generate/ingest-summit.ipynb'' --inputs ''sourcedocs/2304.14953v2-part1.pdf;sourcedocs/2304.14953v2-part2.docx''
           --outputs ''resultdocs/2304.14953v2-part1.md;resultdocs/2304.14953v2-part2.md''
           "
 
@@ -113,11 +114,11 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''combine_markdown-db01761f-d8d8-4a07-907c-f4af071227c6.tar.gz'' --file
-          ''elyra_docling_rh_summit/openshift_solution/combine_markdown.py'' --inputs
-          ''sourcedocs/2304.14953v2-part2.docx;resultdocs/note.txt;resultdocs/2304.14953v2-part2.md;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part1.md''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''combine_markdown-db01761f-d8d8-4a07-907c-f4af071227c6.tar.gz''
+          --file ''elyra_docling_rh_summit/openshift_solution/combine_markdown.py''
+          --inputs ''sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part2.md;resultdocs/2304.14953v2-part1.md;sourcedocs/2304.14953v2-part2.docx''
           --outputs ''resultdocs/combined.md'' "
 
           '
@@ -153,11 +154,11 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''HITL_MarkdownReview-e91d428b-1397-4f77-9514-3f29be067bcd.tar.gz'' --file
-          ''elyra_docling_rh_summit/openshift_solution/HITL_MarkdownReview.ipynb''
-          --inputs ''sourcedocs/2304.14953v2-part2.docx;resultdocs/note.txt;resultdocs/combined.md;resultdocs/2304.14953v2-part2.md;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part1.md''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''HITL_MarkdownReview-e91d428b-1397-4f77-9514-3f29be067bcd.tar.gz''
+          --file ''elyra_docling_rh_summit/openshift_solution/HITL_MarkdownReview.ipynb''
+          --inputs ''resultdocs/2304.14953v2-part1.md;sourcedocs/2304.14953v2-part2.docx;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part2.md;resultdocs/combined.md''
           "
 
           '
@@ -193,10 +194,10 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''injest-splitter-8a30ef71-5ae7-4c47-b3b9-e1c583ed99fe.tar.gz'' --file ''instruct-generate/injest-splitter.ipynb''
-          --inputs ''sourcedocs/2304.14953v2-part2.docx;resultdocs/note.txt;resultdocs/combined.md;resultdocs/2304.14953v2-part2.md;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part1.md''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''injest-splitter-8a30ef71-5ae7-4c47-b3b9-e1c583ed99fe.tar.gz''
+          --file ''instruct-generate/injest-splitter.ipynb'' --inputs ''resultdocs/2304.14953v2-part1.md;sourcedocs/2304.14953v2-part2.docx;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part2.md;resultdocs/combined.md''
           "
 
           '
@@ -232,10 +233,11 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user1.svc.cluster.local:9000'' --cos-bucket
-          ''pipelines'' --cos-directory ''docling_elyra_summit-0424043932'' --cos-dependencies-archive
-          ''HITL_qna_review-b816de19-69a2-4660-a2af-ca808be3581a.tar.gz'' --file ''elyra_docling_rh_summit/openshift_solution/HITL_qna_review.ipynb''
-          --inputs ''sourcedocs/2304.14953v2-part2.docx;resultdocs/note.txt;resultdocs/combined.md;resultdocs/2304.14953v2-part2.md;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part1.md''
+          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
+          --cos-dependencies-archive ''HITL_qna_review-b816de19-69a2-4660-a2af-ca808be3581a.tar.gz''
+          --file ''elyra_docling_rh_summit/openshift_solution/HITL_qna_review.ipynb''
+          --inputs ''resultdocs/2304.14953v2-part1.md;sourcedocs/2304.14953v2-part2.docx;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part2.md;resultdocs/combined.md''
           "
 
           '
@@ -333,7 +335,7 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
         exec-run-a-file-2:
           podMetadata:
             annotations:
@@ -351,7 +353,7 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
         exec-run-a-file-3:
           podMetadata:
             annotations:
@@ -369,7 +371,7 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
         exec-run-a-file-4:
           podMetadata:
             annotations:
@@ -388,7 +390,7 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
         exec-run-a-file-5:
           podMetadata:
             annotations:
@@ -406,7 +408,7 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
         exec-run-a-file-6:
           podMetadata:
             annotations:
@@ -425,4 +427,4 @@ platforms:
               secretKey: AWS_ACCESS_KEY_ID
             - envVar: AWS_SECRET_ACCESS_KEY
               secretKey: AWS_SECRET_ACCESS_KEY
-            secretName: minio-data-conn
+            secretName: dashboard-dspa-secret
