--- a/openshift_solution/docling_elyra_summit.yaml
+++ b/openshift_solution/docling_elyra_summit.yaml
@@ -34,7 +34,7 @@ deploymentSpec:
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
           && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''https://minio-api-granite-model-project.apps.cluster-hdv5q.hdv5q.sandbox4022.opentlc.com''
+          ''{cos_endpoint}''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424170513''
           --cos-dependencies-archive ''copy_files-e4165c2f-c2b3-4415-92b8-a0d36b4b4e69.tar.gz''
           --file ''elyra_docling_rh_summit/openshift_solution/copy_files.py'' --outputs
