--- a/openshift_solution/pipelines_yaml/docling_elyra_summit.yaml
+++ b/openshift_solution/pipelines_yaml/docling_elyra_summit.yaml
@@ -33,8 +33,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''--cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' 
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''copy_files-e4165c2f-c2b3-4415-92b8-a0d36b4b4e69.tar.gz''
           --file ''elyra_docling_rh_summit/openshift_solution/copy_files.py'' --outputs
@@ -73,8 +73,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''ingest-summit-9da8883d-0641-40ae-8fa3-ac56dcc1fb5b.tar.gz''
           --file ''instruct-generate/ingest-summit.ipynb'' --inputs ''sourcedocs/2304.14953v2-part1.pdf;sourcedocs/2304.14953v2-part2.docx''
@@ -113,8 +113,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''combine_markdown-db01761f-d8d8-4a07-907c-f4af071227c6.tar.gz''
           --file ''elyra_docling_rh_summit/openshift_solution/combine_markdown.py''
@@ -153,8 +153,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''HITL_MarkdownReview-e91d428b-1397-4f77-9514-3f29be067bcd.tar.gz''
           --file ''elyra_docling_rh_summit/openshift_solution/HITL_MarkdownReview.ipynb''
@@ -193,8 +193,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''injest-splitter-8a30ef71-5ae7-4c47-b3b9-e1c583ed99fe.tar.gz''
           --file ''instruct-generate/injest-splitter.ipynb'' --inputs ''resultdocs/2304.14953v2-part1.md;sourcedocs/2304.14953v2-part2.docx;sourcedocs/2304.14953v2-part1.pdf;resultdocs/2304.14953v2-part2.md;resultdocs/combined.md''
@@ -232,8 +232,8 @@ deploymentSpec:
           --output requirements-elyra.txt)"
 
           sh -c "python3 -m pip install  packaging && python3 -m pip freeze > requirements-current.txt
-          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit'' --cos-endpoint
-          ''http://minio.summit-project-user2.svc.cluster.local:9000''
+          && python3 bootstrapper.py --pipeline-name ''docling_elyra_summit''
+          --cos-endpoint ''http://minio.summit-project-user2.svc.cluster.local:9000''
           --cos-bucket ''pipelines'' --cos-directory ''docling_elyra_summit-0424194748''
           --cos-dependencies-archive ''HITL_qna_review-b816de19-69a2-4660-a2af-ca808be3581a.tar.gz''
           --file ''elyra_docling_rh_summit/openshift_solution/HITL_qna_review.ipynb''
